# TraficJammer

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt
include/: Car.h  Common.h  Config.h  Drawable.h  Player.h  RaylibExtCommon.h  Road.h
include/Objects/: Car.h  Collision.h  Drawable.h  Grass.h  Object.h  Player.h  Road.h
include/Objects/Physics/: Collision.h  CollisionManager.h
include/Objects/Tree/: BushyTree.h  CloverTree.h  RadialRoundTree.h  SimpleRoundTree.h  Tree.h
src/: Car.cpp  Player.cpp  Road.cpp  main.cpp
src/Objects/: Car.cpp  Collision.cpp  Player.cpp  Road.cpp
src/Objects/Physics/: Collision.cpp  CollisionManager.cpp
src/Objects/Tree/: BushyTree.cpp  CloverTree.cpp  RadialRoundTree.cpp  SimpleRoundTree.cpp  Tree.cpp
src/Shaders/: grass.fs  grass.vs
